# opaseety

./: README.md  pyproject.toml  sets.toml
opaseety/: __init__.py  app.py  app2.py  blend.py  opaseety.py  utils.py
opaseety/templates/: set.jinja
tests/: test_blend.py  test_opaseety.py
